--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Janielle Rivera</h1>
         <ul>
             <li> <a href="#recent-work">Work</a> </li>
-            <li> <a href="resume.pdf">Resume</a> </li>
+            <li> <a target="_blank" href="resume.pdf">Resume</a> </li>
             <li> <a href="#footer1">Contact</a> </li>
         </ul>
     </nav>
@@ -65,18 +65,18 @@
     <footer id="footer1">
         <ul>
             <li>
-                <a href="www.linkedin.com/in/janielle-joy-rivera1972">LinkedIn
+                <a target="_blank" href="https://github.com/janiellejoyr">Github
                     <span class="link-icon">
-                       <i class="fa-brands fa-linkedin"></i>
+                       <i class="fa-brands fa-github"></i>
                     </span>
                 </a>
             </li>
             <li>
-                <a href="resume.pdf">CV
+                <a target="_blank" href="resume.pdf">CV
                     <span class="link-icon">
                         <i class="fa-solid fa-circle-user"></i>
                     </span>
-                </a>
+                 </a>
             </li>
             <li>
                 <a href="mailto:janiellejoyr@gmail.com">Email
