--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
         
             </div>
        <div class="png"><img src="picc.png" alt="" class="article-image"/>
-       <img src="picc1.png" alt="" class="article-image"/>
-       <img src="picc2.png" alt="" class="article-image"/>
-       <img src="picc3.png" alt="" class="article-image"/></div>
+     </div>
         </article>    
     </section>
 
@@ -94,3 +92,4 @@
    
 </body>
 </html>
+
