--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Janielle Rivera</h1>
         <ul>
             <li> <a href="#recent-work">Work</a> </li>
-            <li> <a target="_blank" href="resume.doc">Resume</a> </li>
+            <li> <a target="_blank" href="resume.docx">Resume</a> </li>
             <li> <a href="#footer1">Contact</a> </li>
         </ul>
     </nav>
@@ -70,7 +70,7 @@
                 </a>
             </li>
             <li>
-                <a target="_blank" href="resume.doc">CV
+                <a target="_blank" href="resume.docx">CV
                     <span class="link-icon">
                         <i class="fa-solid fa-circle-user"></i>
                     </span>
@@ -92,5 +92,6 @@
    
 </body>
 </html>
+
 
 
